# flowdapt-cryptocast-plugin

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml
flowdapt_cryptocast_plugin/: __init__.py  api.py  stages.py  utils.py
flowdapt_cryptocast_plugin/configs/: main.yaml
flowdapt_cryptocast_plugin/schedules/: create_features.yaml  train.yaml
flowdapt_cryptocast_plugin/triggers/: trigger_predict.yaml
flowdapt_cryptocast_plugin/workflows/: create_features.yaml  predict.yaml  predict_all.yaml  predict_one.yaml  train.yaml
scripts/: test_client.py
tests/: conftest.py  test_stages.py
